# Robodepop

./: Cargo.toml  LICENSE  README.md
docs/: trim.flac
src/: bin.rs  lib.rs  lib_gain_no_gui.rs  plugin_bin.rs
