[package]
name = "robo_depop_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robo_depop_plugin"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "depop"
path = "src/bin.rs"

[[bin]]
name = "robo_depop_plugin_bin"
path = "src/plugin_bin.rs"

[dependencies]
flac = "0.5.0"
hound = "3.5.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
parking_lot = "0.12"
plotters = "0.3.7"
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "1.1.0"
clap = { version = "4.5.18", features = ["derive"] }

[workspace]
members = ["xtask"]
